--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,28 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+
+
+.navB {
+  width: 120px;
+  height: 60px;
+  margin: 20px;
+  font-size: 25px;
+  font-weight: 300;
+  color: black;
+}
+
+.navH {
+  text-align: center;
+  font-size: large;
+  color: white;
+  font-weight: 700;
+  font-size: 30px;
+  margin: 10px;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #000;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +53,5 @@
   to {
     transform: rotate(360deg);
   }
+}
 }
